# VioletOS

./: .clangd  .gitignore  CMakeLists.txt  README.md  init.py  violet.toolchain.cmake  violet_kernel.ld
src/violet_bootloader/bootloader/: ElfLoader.c  ElfLoader.h  Entry.c  GopInit.h  MemoryMap.c  MemoryMap.h  PageTable.c  PageTable.h
src/violet_kernel/kernel/: KernelMain.c  VioletPanic.c  VioletPanic.h  VioletSyscalls.h
src/violet_kernel/kernel/data_structures/: DynamicList.h  RingBuffer.h  StringView.h  VioletString.h
src/violet_kernel/kernel/memory/: HardwareMemoryAllocator.h  PhysicalMemoryManager.c  PhysicalMemoryManager.h  VirtualMemoryManager.c  VirtualMemoryManager.h
src/violet_kernel/kernel/sys/: types.h
src/violet_kernel/kernel/types/: RingBuffer.h
src/violet_kernel/kernel/vklib/: memset.h  strrchr.c
src/violet_shared/shared/: BootInfo.h  GeneralMacros.h  Gop.c  Gop.h  SyscallNumbers.h
src/violet_shared/shared/arch/: DisableInterrupts.h  GlobalDescriptorTable.h  InterruptDescriptorTable.h  Memory.h  MemoryWidthTypes.h  PageTableOperations.h  Sleep.h
src/violet_shared/shared/arch/arm64/: Sleep.h
src/violet_shared/shared/arch/x86/: Sleep.h
src/violet_shared/shared/console/: GopConsole.c  GopConsole.h  VioletFontData.c
src/violet_shared/shared/gop/: GopConsole.h  GopFrameBuffer.c  GopFrameBuffer.h  VioletColour.h  VioletFontData.h
src/violet_shared/shared/gop/console/: GopConsole.c  GopConsole.h  VioletColour.h
src/violet_shared/shared/utils/: StringConversion.h
